[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mule-pattern-learner"
version = "0.1.0"
description = "Account-level mule detection on TigerGraph"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Abraham Chandy" }]
dependencies = [
    "pyTigerGraph>=1.8",
    "numpy>=2.2",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "tqdm>=4.67",
]

[project.optional-dependencies]
model = ["torch>=2.9", "torch-geometric>=2.7"]
baseline = ["xgboost>=3.0", "scikit-learn>=1.6"]
# Dev tooling.
dev = [
    "pytest>=8.3",
    "basedpyright>=1.21",
    "ruff>=0.9",
    "notebook>=7.0",
    "ipykernel>=6.29",
]
all = ["mule-pattern-learner[model,baseline,dev]"]

[project.scripts]
mule-train = "mule_pattern_learner.training.train:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mule_pattern_learner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# Type checking is configured in pyrightconfig.json (single source of truth);
# basedpyright ignores [tool.basedpyright] here when that file is present.

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests", "scripts"]

[tool.ruff.lint.isort]
# Sort plain `import x` and `from x import y` together by module name within
# each section, rather than grouping all `import x` lines first. This matches
# the import ordering used throughout the codebase.
force-sort-within-sections = true
